# AMD_MEDUSA_APP

./: .clang-format  CMakeLists.txt  Kconfig  app.overlay  buildVersion.sh  debug.conf  enable-i2csmb2.overlay  linker_amdecver.ld  prj.conf  release.conf  west.yml  zephyrbuild.sh  zephyrmenubuild.sh
app/: CMakeLists.txt  Kconfig  app.c
app/acpi/: Kconfig  app_acpi.c  app_acpi.h
app/als/: Kconfig  README_OPT4048_ALGORITHM.md  app_opt4048_thread.c  app_opt4048_thread.h
app/battery_management/: Kconfig  app_smtbty.c  app_smtbty.h
app/ec_debug/: Kconfig  debug_info.c  debug_info.h  ec_debug.h  espi_validation.c
app/fanctrl/: Kconfig  app_fanRpmCtrl.c  app_fanRpmCtrl.h
app/kbchost/: Kconfig  kbchost.c  kbchost.h  keyboard_utility.c  keyboard_utility.h
app/peripheral_management/: Kconfig  app_btn.c  app_btn.h  periphmgmt.c  periphmgmt.h
app/power_management/: Kconfig  app_AcDcSwitch.c  app_AcDcSwitch.h  app_sleep.c  app_sleep.h
app/power_sequencing/: Kconfig  app_pseq.c  app_pseq.h  pwrseq_timeouts.h
app/s0stest/: Kconfig  app_spiS0.c  app_spiS0.h
app/saf/: Kconfig  saf_config.c  saf_config.h  saf_spi_transaction.h
app/sfh/: Kconfig  app_sfh.c  app_sfh.h  app_sfh_fn.c  app_sfh_fn.h  app_sfh_waie.c  app_sfh_waie.h
app/smchost/: Kconfig  acpi_region.h  sci.c  sci.h  scicodes.h  smc.c  smc.h  smchost.c  smchost.h  smchost_commands.h  smchost_extended.h  smchost_pm.c
app/thermal_management/: Kconfig  app_thermal.c  app_thermal.h
app/udc/: Kconfig  app_udc.c  app_udc.h
app/usbc/: Kconfig  app_4cc.h  app_ccgx.h  app_ite_pd.c  app_ite_pd.h  app_realtek_pd.c  app_realtek_pd.h  app_ucsi_tunnel.c  app_ucsi_tunnel.h  app_usbc_task.c  app_usbc_task.h
app/wireless_manageability/: Kconfig  app_manOs.c  app_manOs.h
boards/: CMakeLists.txt  Kconfig  board_config.h
boards/nuvoton/: npcx498f.svd  npcx4mnx_pin.h
boards/nuvoton/npcx4mnx_mdsaeris/: Aeris.xlsm  Aeris_ioexp.csv  Aeris_main.csv  gen_ioexptable.sh  gen_nativegpio.sh  zephyrbuild.sh
boards/nuvoton/npcx4mnx_mdsdorne/: Dorne.xlsm  Dorne_ioexp.csv  Dorne_main.csv  gen_ioexptable.sh  gen_nativegpio.sh  zephyrbuild.sh
boards/nuvoton/npcx4mnx_mdsplum/: Plum.xlsm  Plum_ioexp.csv  Plum_main.csv  filecopy.py  gen_ioexptable.sh  gen_nativegpio.sh  zephyrbuild.sh
boards/nuvoton/npcx4mnx_mdsplum_ecmodule/: Plum_module.xlsm  (+3 more)
boot/: CMakeLists.txt  prj.conf
boot/src/: flash_shell.c  gpio_shell.c  main.c  memory_service.c
docs/source/: conf.py  index.rst
drivers/: CMakeLists.txt  Kconfig  acpi.h  acpiplanes.c  acpiplanes.h  adc_sensors.c  adc_sensors.h  amd_crb_drivers_hpi.h  amd_crb_drivers_ite_pd.h  amd_crb_drivers_mp2764.c  amd_crb_drivers_mp2764.h  amd_crb_drivers_pd.h  amd_crb_drivers_raa489300.h  amd_crb_drivers_realtek_pd.h  amd_crb_drivers_realtek_ucsi.h  amd_crb_drivers_spiFlash.c  amd_crb_drivers_spiFlash.h  amd_crb_drivers_tps6599x.h  amd_crb_drivers_tps6699x.h  amd_crb_drivers_ucsi.h  amd_crb_drivers_ucsi_internal.h  amd_crb_modbusrtu_driver.c  amd_crb_modbusrtu_driver.h  amdcrb_keymap.c  dev_cpld.c  dev_cpld.h  dev_ina219.c  dev_ina219.h  dev_isl9241.h  dev_lm95234.c  dev_lm95234.h  dev_max695x.c  dev_max695x.h  dev_mp2815_SVI3.c  dev_mp2815_SVI3.h  dev_mpc.c  dev_mpc.h  dev_opt4048.c  dev_opt4048.h  dev_pca9535.c  (+49 more)
drivers/gigadevice/: CMakeLists.txt  saf_spi_gigadevice.c  saf_spi_gigadevice.h  spi_gigadevice_opcodes.h
drivers/nuvoton/: CMakeLists.txt  gpio_ec.h  nuvoton_espi.h  nuvoton_gpio_ctrl.h  psl.c  psl.h
drivers/realtek/: CMakeLists.txt  gpio_ec.h  psl.c  psl.h  realtek_acpi.c  realtek_espi.c  realtek_espi.h  realtek_gpio_ctrl.h  realtek_gpio_impl.c  scaffold_stubs.c
drivers/winbond/: CMakeLists.txt  saf_spi_winbond.c  saf_spi_winbond.h  spi_winbond_opcodes.h
external_lib/app/: CMakeLists.txt
external_lib/driver/: CMakeLists.txt
external_lib/script/: libgenerate.sh  librestore.sh
include/: errcodes.h  system.h
include/dt-bindings/: gpio_defines.h  pwm_hbm_define.h
libamd/: Makefile
libamd/include/: mylib.h
libamd/src/: mylib.c
libamd/tmp/: amdlib_project-mkdirs.cmake
linker/: custom-sections.ld
misc/: CMakeLists.txt  Kconfig  f_bram.c  f_bram.h  f_nv_options.c  f_nv_options.h  f_romSig.c  f_romSig.h  flashhdr.c  flashhdr.h  memops.h  softstrap.c  softstrap.h  task_handler.c  task_handler.h
rom/mec1723/: FlashEC_x81000.bat  mergboot.py  spi_cfg.txt
rom/nuvoton/: FlashEC_x0.bat  FlashEC_x61000.bat  FlashEC_xD1000.bat  boot  boot_nuvton  ecst.py  ecst_args.py  mergboot.py
scripts/: generate_config.py  ioexpTable_AutoGen.pl  nativeGPIO_AutoGen.pl  nativeGPIO_AutoGen_Nuvoton.pl
scripts/gitlint/: zephyr_commit_rules.py
shell/: CMakeLists.txt  Kconfig  eeprom_service.c  gpio_service.c  memory_service.c  nvoption_service.c  reboot_service.c  spiflash_service.c
utilities/: CMakeLists.txt  Kconfig  dbgLogFifo.c  dbgLogFifo.h  dbgRw.c  dbgRw.h  u_crc8.c  u_crc8.h  u_misc.c  u_misc.h  u_numbers.c  u_numbers.h  u_rrq.c  u_rrq.h  u_time.c  u_time.h
zephyr_patches/: 0001-AMD-kernel-V3_2.patch  west.yml
(+206 files in other folders)
